changed button style - moved dark mode button - fixed positioning and z-index issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,8 @@ body{
   @apply border rounded-md shadow-md border-white dark:border-[#31363F] max-w-fit p-2 flex mx-2
 }
 .ts_tooltip{
-  @apply absolute ml-16 font-extrabold scale-100 md:scale-0 lg:scale-0 group-hover:scale-100 dark:bg-[#222831]  bg-gray-200 p-2 rounded-lg text-sm md:text-base
+  @apply absolute ml-16 font-extrabold scale-100 md:scale-0 lg:scale-0 group-hover:scale-100 dark:bg-[#222831]  bg-gray-200 p-2 rounded-lg text-sm md:text-base;
+  z-index: 1;
 }
 
 .svg_hover:hover{
@@ -52,12 +53,10 @@ body{
   transition: 0s ease;
 }
 .button_hover:hover{
-  background-color: rgb(21, 0, 255);
-  color: #ffffff;
-  fill: white;
-  padding-left: 15px;
+  padding-left: 20px;
 }
-.button_hover{
+.button_blue_gradient{
+  @apply flex text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:scale-105 active:scale-95 focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2
 }
 .menu{
   transition: 0s ease;
